--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body></body>
+    <body>
+        <div id="canvas"></div>
+    </body>
+    <script src="script.js"></script>
 </html>
