--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="canvas"></div>
+        <div id="container">
+            <div id="canvas"></div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
