--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <div id="container">
-            <div id="canvas"></div>
+            <header>
+                <p id="header-text">Etch-a-Sketch</p>
+            </header>
+            <div id="content">
+                <div id="canvas"></div>
+            </div>
         </div>
     </body>
     <script src="script.js"></script>
