--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                 <p id="header-text">Etch-a-Sketch</p>
             </header>
             <div id="content">
+                <div id="content-left"></div>
                 <div id="canvas"></div>
+                <div id="content-right">
+                    <input type="range" min="4" max="100" value="32" id="slider">
+                </div>
             </div>
         </div>
     </body>
