--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div id="content-left"></div>
                 <div id="canvas"></div>
                 <div id="content-right">
+                    <button id="clear-btn">Clear</button>
                     <input type="range" min="4" max="100" value="32" id="slider">
                 </div>
             </div>
