Add eraser button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div id="content-right">
                     <button id="clear-btn">Clear</button>
                     <input type="range" min="4" max="100" value="32" id="slider">
+                    <button id="eraser-btn" data-btn-type="eraser">Eraser</button>
                 </div>
             </div>
         </div>
