--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div id="content">
                 <div id="content-left">
                     <button id="black-btn" class="pen-mode" data-btn-type="black">Black</button>
+                    <button id="shading-btn" class="pen-mode" data-btn-type="shading">Shading</button>
                 </div>
                 <div id="canvas"></div>
                 <div id="content-right">
