--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div id="content-left">
                     <button id="black-btn" class="pen-mode" data-btn-type="black">Black</button>
                     <button id="shading-btn" class="pen-mode" data-btn-type="shading">Shading</button>
+                    <button id="rainbow-btn" class="pen-mode" data-btn-type="rainbow">Rainbow</button>
                 </div>
                 <div id="canvas"></div>
                 <div id="content-right">
