Add toggle grid button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <button id="clear-btn">Clear</button>
                     <input type="range" min="4" max="100" value="32" id="slider">
                     <button id="eraser-btn" class="pen-mode" data-btn-type="eraser">Eraser</button>
+                    <button id="grid-btn">Grid</button>
                 </div>
             </div>
         </div>
