--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="favicon.png">
     </head>
     <body>
         <div id="container">
