--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
             <div id="content">
                 <div id="content-left">
                     <button id="black-btn" class="pen-mode" data-btn-type="black">Black</button>
-                    <input type="color" id="color-picker" class="pen-mode" data-btn-type="colorPicker">
+                    <div id="color-picker-container">
+                        <label for="color-picker">Pick a color:</label>
+                        <input type="color" id="color-picker" class="pen-mode" data-btn-type="colorPicker">
+                    </div>
                     <button id="shading-btn" class="pen-mode" data-btn-type="shading">Shading</button>
                     <button id="rainbow-btn" class="pen-mode" data-btn-type="rainbow">Rainbow</button>
                 </div>
                 <div id="canvas"></div>
                 <div id="content-right">
                     <button id="clear-btn">Clear</button>
-                    <input type="range" min="4" max="100" value="32" id="slider">
+                    <div id="slider-container">
+                        <label for="slider">Grid size:</label>
+                        <input type="range" min="4" max="100" value="32" id="slider">
+                    </div>
                     <button id="eraser-btn" class="pen-mode" data-btn-type="eraser">Eraser</button>
                     <button id="grid-btn">Grid</button>
                 </div>
