--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             </header>
             <div id="content">
                 <div id="content-left">
-                    <button id="black-btn" class="pen-mode" data-btn-type="black">Black</button>
+                    <button id="pen-btn" class="pen-mode" data-btn-type="pen">Pen</button>
                     <div id="color-picker-container">
                         <label for="color-picker">Pick a color:</label>
-                        <input type="color" id="color-picker" class="pen-mode" data-btn-type="colorPicker">
+                        <input type="color" id="color-picker" class="pen-mode" data-btn-type="pen">
                     </div>
                     <button id="shading-btn" class="pen-mode" data-btn-type="shading">Shading</button>
                     <button id="rainbow-btn" class="pen-mode" data-btn-type="rainbow">Rainbow</button>
