--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="content-left">
                     <button id="pen-btn" class="pen-mode" data-btn-type="pen">Pen</button>
                     <div id="color-picker-container">
-                        <label for="color-picker">Pick a color:</label>
+                        <label for="color-picker">Pen color:</label>
                         <input type="color" id="color-picker" class="pen-mode" data-btn-type="pen">
                     </div>
                     <button id="shading-btn" class="pen-mode" data-btn-type="shading">Shading</button>
@@ -24,13 +24,13 @@
                 </div>
                 <div id="canvas"></div>
                 <div id="content-right">
-                    <button id="clear-btn">Clear</button>
+                    <button id="grid-btn">Grid</button>
                     <div id="slider-container">
                         <label for="slider">Grid size:</label>
                         <input type="range" min="4" max="100" value="32" id="slider">
                     </div>
                     <button id="eraser-btn" class="pen-mode" data-btn-type="eraser">Eraser</button>
-                    <button id="grid-btn">Grid</button>
+                    <button id="clear-btn">Clear</button>
                 </div>
             </div>
         </div>
